web/styles/custom.css
/* TODO: unify this file */
:root {
  --text: #291a00;
  --background: #fff0d6;
  --dark-background: #302f2f;
  --primary: #fac505;
  --secondary: #ffd97a;
  --accent: #ff9500;
  --pinned: #ffdb56;
  --pinned-hover: #e0ba31;
  --bubble: #ffea9c;
  --bubble-hover: #e9d385;
  --grey: #dbdbdb;
  --shadow: rgba(0, 38, 255, 0.2);
  --white: #ffffff;
  --white-hover: #f5f5f5;
}

.smj-text {
  color: #291a00;
}

.smj-text:hover {
  color: #ff9500;
}

.smj-white-bubble {
  background-color: var(--white);
}
.smj-white-bubble:hover {
  background-color: var(--white-hover);
}

.smj-dark {
  background-color: var(--dark-background);
}

.smj-grey {
  background-color: var(--grey);
}

.smj-color-bubble-pinned {
  background-color: var(--pinned);
}
.smj-color-bubble-pinned:hover {
  background-color: var(--pinned-hover);
}

.smj-color-bubble {
  background-color: var(--bubble);
}

.smj-color-bubble:hover {
  background-color: var(--bubble-hover);
}

.nav-item .nav-link {
  padding-top: 0.2rem !important;
  padding-bottom: 0.2rem !important;
}

.navbar-nav .navbar-div {
  font-size: 120%;
  padding: 0.2rem;
}

@media (min-width: 768px) {
  .navbar-nav .navbar-div {
    padding-top: 4px;
    padding-bottom: 4px;
    padding-right: 10px;
    padding-left: 10px;
  }

  .navbar-nav .navbar-div {
    font-size: 100%;
  }
}

@media (min-width: 1495px) {
  .navbar-nav .navbar-div {
    padding-top: 6px;
    padding-bottom: 6px;
    padding-right: 50px;
    padding-left: 15px;
  }
}

.nav-link.active .navbar-div {
  background: #f9da68;
  border-style: none;
}

.navbar-div span {
  margin-left: 9px;
}

.header-controlbar .btn {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.row-plan-no-assignment {
  background: rgb(255, 207, 204);
}

.smj-table-header {
  background: rgb(247, 225, 34) !important;
}

.smj-table {
  box-shadow: 1px 1px 6px;
  padding-bottom: 20px;
  background: rgb(247, 247, 247);
  border-radius: 11px;
  margin-bottom: 10px;
  overflow: hidden;
}

.smj-table > .row {
  padding-right: 0px;
  padding-top: 9px;
  padding-left: 0px;
  padding-bottom: 9px;
  margin-left: 0px;
  margin-right: 0px;
}

.smj-search-stack {
  margin: 18px;
  padding-left: 22px;
  padding-right: 22px;
  background: #f5f5f5;
  padding-top: 23px;
  padding-bottom: 23px;
  margin-right: 0px;
  margin-top: 0px;
  margin-left: 0px;
}

.smj-search-stack input {
  padding: 6px;
}

.btn-with-icon > i.far,
.btn-with-icon > i.fas {
  margin-right: 0.6rem;
}

img.smj-nav-logo {
  width: 60px;
  height: auto;
}

#btn-nav-logout {
  border-style: none;
  box-shadow: 0px 0px;
  padding-bottom: 6px;
  padding-top: 6px;
}

.smj-gray {
  background-color: #f5f5f5 !important;
}

.smj-white {
  background: rgb(247, 247, 247) !important;
}

.smj-table-body {
  background: rgb(247, 247, 247) !important;
}

.smj-table-body:hover {
  background: rgb(228, 228, 228) !important;
}

.btn {
  box-shadow: 1px 1px 2px 2px var(--shadow);
}

.smj-shadow {
  box-shadow: 2px 2px 2px 3px var(--shadow);
}

.smj-shadow-small {
  box-shadow: 1px 1px 2px 2px var(--shadow);
}

.smj-expandable-row,
.smj-category-row {
  transition: all 0.1s ease-out;
  cursor: pointer;
}

.smj-expandable-row {
  background-color: #ececec !important;
}

.smj-expandable-row:hover {
  background-color: #dddddd !important;
}

.smj-expandable-row > td:first-child > i,
.smj-category-row > td:first-child > i {
  margin-right: 10px;
}

.smj-details-row > td:first-child {
  padding: 0px;
  border: 0px;
}

.smj-details-row {
  white-space: normal;
}

.smj-row-collapsible {
  overflow: hidden;
  transition: all 0.2s ease-out;
}

.smj-sticky-col-bottom {
  position: sticky;
  z-index: 100;
  bottom: 0;
}

.smj-sticky-col-top {
  position: sticky;
  z-index: 500;
  top: 0;
}

.smj-sticky-col-right {
  position: sticky;
  z-index: 0;
  right: 0;
  box-shadow: -5px 0px 5px -3px var(--shadow) !important;
}

.smj-sticky-col-left {
  position: sticky;
  z-index: 0;
  left: 0;
  box-shadow: 5px 0px 5px -3px var(--shadow) !important;
}

.smj-light-grey {
  background-color: #ececec;
}

.smj-background-error {
  background-color: #ffd9d9;
}

.outline-none {
  outline: none;
}

.smj-filter-input {
  min-width: 200px;
}

.smj-filter-input option:first-of-type {
  color: #888;
}

.smj-filter-input option {
  color: #000;
}

.smj-filter-select:focus {
  box-shadow: inset 0 -2px 0 #fdc345;
}

.smj-filter-select {
  outline: none;
  width: 100%;
  padding: 0 30px 0 0px;
  -webkit-padding-end: 30px;
  -webkit-padding-start: 0px;
  font-size: 20px;
}

.smj-filter-select option {
  width: 100%;
  color: white !important;
  font-size: 16px;
  padding: 20px;
  overflow-y: auto;
  overflow-x: auto;
  max-height: 20px;
}

.smj-filter-select option:hover {
  background-color: #888 !important;
}

.smj-filter-select option:checked {
  background-color: #fdc345 !important;
}

.smj-dropdown {
  border: 0px;
  outline: 0px;
  width: 100%;
  color: #666;
  white-space: normal;
  text-overflow: ellipsis; /* three dots when input is too long */
}

.smj-dropdown:focus {
  box-shadow: inset 0 -2px 0 #fdc345 !important;
}

.hiddenInput {
  height: 0;
  padding: 0;
  margin: 0;
  border: none;
  overflow: hidden;
}

.smj-dropdown-menu {
  border: 0px;
  outline: 0px;
  position: absolute;
  inset: 0px auto auto 0px;
  margin: 0px;
  width: 100%;
  max-height: 200px;
  overflow: auto;
}

.smj-dropdown-item {
  border: 0px;
  outline: 0px;
  white-space: normal;
  width: 100%;
  color: #666;
}

.smj-dropdown-item:hover {
  background-color: #adadad;
}

.smj-dropdown-item:active {
  background-color: #fdc345;
}

.smj-selected {
  background-color: #facf81;
}

.smj-default-option {
  color: #888;
}

.sort-inactive {
  color: rgb(151 151 151 / 24%);
}

.cursor-pointer {
  cursor: pointer;
}

.error-code-border {
  border-right: 1px solid rgb(114, 114, 114);
}

.smj-action-complete {
  color: #007400;
}

.smj-action-complete:hover {
  color: #00b300;
}

.smj-action-completed {
  font-size: 110%;
  width: 1rem;
  padding-left: 0.1rem;
  color: #75000a;
}

.smj-action-completed:hover {
  color: #af000f;
}

.smj-action-delete {
  color: #9c0000;
}

.smj-action-delete:hover {
  color: #e40000;
}

.smj-action-pinned-color {
  color: #d76e13;
}

.smj-action-pinned {
  color: #d76e13;
}

.smj-action-pin:hover {
  color: #d76e13;
}

.smj-action-pinned:hover {
  color: inherit;
}

.smj-action-edit {
  color: #000000;
}

.smj-action-edit:hover {
  color: #2651c9;
}

.smj-action-hide {
  color: #494949;
}

.smj-action-hide:hover {
  color: #adadad;
}

.smj-action-hidden {
  color: #adadad;
}

.smj-action-hidden:hover {
  color: #494949;
}

.spinning {
  animation: 1s linear infinite spinner-border;
}

.smj-pinned-job-row {
  background-color: #fadaaa;
}

.btn-light {
  background-color: #f8f9fa !important;
}

.btn-light:hover {
  background-color: #b1b1b1 !important;
}

.btn-day-select {
  --bs-btn-color: #000000;
  --bs-btn-active-bg: #ffe9b8;
  width: 50px;
}

@media (max-width: 480px) {
  .btn-day-select {
    padding: 0.25rem 0.45rem;
    width: 30px;
  }
  .btn-responsive {
    padding: 0.5rem 0.7rem !important;
    font-size: 0.8rem !important;
  }
}

.btn-check:checked + .btn-day-select,
.btn-check:checked + .btn-allergy-select {
  box-shadow: inset 2px 3px 1px 0px #d7c59d;
  background-color: #ffe9b8 !important;
}

.btn-disabled {
  background-color: #adadad;
}

.smj-range {
  max-width: 250px;
}

.smj-checkbox {
  width: 25px;
  height: 25px;
}

.smj-checkbox:focus {
  border: #adadad;
  box-shadow: 0 0 4px #fdc345 !important;
}

.smj-checkbox:not(:checked) {
  background-color: white !important;
}

.smj-checkbox:checked {
  border-color: #fdc345 !important;
  background-color: #fdc345 !important;
}

.smj-form-check-input:checked {
  background-color: #ffbc06 !important;
  border-color: #ffbc06 !important;
}

.smj-textarea {
  border-radius: 5px;
}

.smj-textarea:focus {
  box-shadow: inset 0 -2px 0 #fdc345 !important;
}

.smj-input:focus {
  box-shadow: inset 0 -2px 0 #fdc345 !important;
}

.smj-progress-bar {
  background-color: #fdc345 !important;
}

.text-small {
  font-size: 0.8rem;
}

.bg-category-done {
  background-color: #d4edda !important;
}

.bg-category-done:hover {
  background-color: #b4ceba !important;
}

.bg-jobless {
  background-color: #f1a697 !important;
}

.bg-jobless:hover {
  background-color: #da6f5a !important;
}

.smj-completed-job-row td:first-of-type::before {
  background-color: #d4edda !important;
  content: '';
  height: 2.5rem;
  width: 0.5rem;
  display: block;
  margin-right: 0.5rem;
}

.smj-completed-job-row td:first-of-type {
  padding: 0rem;
  display: flex;
  align-items: center;
}

.bg-category-hidden {
  background-color: #b6b6b6;
}

.bg-category-hidden:hover {
  background-color: #a3a3a3;
}

.smj-hidden-job-row td:first-of-type::before {
  background-color: #dddddd;
  content: '';
  height: 2.5rem;
  width: 0.5rem;
  display: block;
  margin-right: 0.5rem;
}

.smj-hidden-job-row td:first-of-type {
  padding: 0rem;
  display: flex;
  align-items: center;
}

.text-prewrap {
  white-space: pre-wrap;
}

.smj-pagination {
  display: flex;
  justify-content: center;
  list-style: none;
  padding-left: 0;
}

.smj-page-item:first-child .smj-page-link {
  border-top-left-radius: 0.5rem;
  border-bottom-left-radius: 0.5rem;
}

.smj-page-link.active,
.active > .smj-page-link {
  background-color: #f7e122;
  border-color: #e6d21f;
  color: #000000;
}

.smj-page-link {
  position: relative;
  display: block;
  padding: 0.5rem 0.75rem;
  margin-left: -1px;
  line-height: 1.25;
  color: #000000;
  background-color: #fff;
  border: 1px solid #dee2e6;
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  text-decoration: none;
}

.smj-page-item:not(:first-child) .smj-page-link {
  margin-left: -1px;
}

.smj-page-item:last-child .smj-page-link {
  border-top-right-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
}

.smj-page-link:hover {
  color: #000000;
  background-color: #e9ecef;
  border-color: #dee2e6;
}

.smj-page-link.disabled,
.disabled > .smj-page-link {
  color: #888;
  pointer-events: none;
}

.hover-text {
  display: none;
  background-color: #f9f9f9;
  color: #333;
  margin-left: 5px;
}

.btn:hover .hover-text {
  display: inline-block;
}

.smj-photo-icon-delete {
  font-size: 24px;
}

.smj-add-photo-icon:hover {
  background-color: #e9ecef;
}

.smj-photo-size {
  height: 200px;
  width: 200px;
}

@media (max-width: 768px) {
  .smj-photo-size {
    height: 150px;
    width: 150px;
  }
  .smj-photo-icon-delete {
    font-size: 20px;
  }
}

.smj-file-upload {
  opacity: 0;
  position: absolute;
  z-index: -1;
}

.smj-map-container {
  z-index: 1; /* Fix for too high z-index of zoom panel */
  height: 370px;
  width: 100%;
}

@media (max-width: 768px) {
  .smj-map-container {
    height: 210px;
  }
}

.pill {
  background-color: #e0e0e0;
  border-radius: 16px;
  padding: 8px 16px;
  margin: 4px 8px 4px 0px;
  display: flex;
  align-items: center;
}

.pill-static {
  background-color: #e0e0e0;
  border-radius: 16px;
  padding: 4px 10px;
  margin: 4px 8px 4px 0px;
  display: flex;
  align-items: center;
}

.pill:hover {
  background-color: #b6b6b6;
}

.pill-close {
  margin-left: 8px;
  cursor: pointer;
  color: #555;
}

.smj-post-section {
  background-color: #ffffff;
  border-radius: 5px;
  overflow: hidden;
}

.smj-section-header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  background-color: #cccccc;
  cursor: pointer;
}

.smj-section-header:hover {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  background-color: #b6b6b6;
  cursor: pointer;
}

.smj-sort-choice {
  background-color: #e0e0e0;
}

.smj-sort-choice:hover {
  background-color: #b6b6b6;
}

.smj-sort-choice.selected {
  background-color: #fdc345;
}

